# micoo

./: .cliffignore  .gitignore  .pre-commit-config.yaml  .yamlfmt  AGENTS.md  CHANGELOG.md  JOURNAL.md  README.md  codecov.yml  mise.toml  prek.toml  pyproject.toml  renovate.json
.github/: prerelease-config.json  release-config.json  release-drafter.yml
.github/workflows/: cd.yml  check-pr-title.yml  ci.yml  release-drafter.yml  release-please.yml
docs/adr/: 001-development-tooling.md
src/micoo/: config.py  interactive.py  logging_setup.py  main.py
tests/: test_main.py
tests/e2e/: test_cli.py
tests/integration/: test_branches.py
tests/smoke/: test_smoke.py
tests/unit/: test_helpers.py
