[project]
name = "micoo"
description = "micoo is a command-line tool for easily accessing mise cookbooks"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
keywords = [
  "boilerplate",
  "cli",
  "command-line",
  "config-file",
  "cookbook",
  "developer-tools",
  "mise",
  "mise-cookbooks",
  "scaffold",
  "setup",
  "template",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "gitpython>=3.1.46",
  "platformdirs>=4.9.6",
  "pydantic-settings>=2.14.1",
  "typer>=0.25.1",
]
dynamic = ["version"]
readme = "README.md"

[project.urls]
changelog = "https://github.com/hasansezertasan/micoo/releases"
documentation = "https://github.com/hasansezertasan/micoo#readme"
homepage = "https://github.com/hasansezertasan/micoo"
issues = "https://github.com/hasansezertasan/micoo/issues"
releasenotes = "https://github.com/hasansezertasan/micoo/releases"
source = "https://github.com/hasansezertasan/micoo.git"

[project.scripts]
micoo = "micoo.main:app"

[dependency-groups]
dev = [
  "prek==0.4.4",
  "tox-uv==1.35.2",
  "tox==4.55.1",
  { include-group = "lint" },
  { include-group = "test" },
]
lint = [
  "actionlint-py==1.7.12.24",
  "google-yamlfmt==0.21.0",
  "mypy==2.1.0",
  "pyrefly==1.0.0",
  "pyright==1.1.410",
  "ruff==0.15.17",
  "slotscheck==0.20.0",
  "taplo==0.9.3",
  "ty==0.0.49",
  "typos==1.47.0",
  "validate-pyproject[all]==0.25",
  "vulture==2.16",
]
test = ["coverage[toml]==7.14.1", "pytest-dependency==0.6.1", "pytest==9.1.0"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source_pkgs = ["micoo", "tests"]
branch = true
parallel = true
omit = ["src/micoo/_version.py"]

[tool.coverage.paths]
micoo = ["src/micoo", "*/micoo/src/micoo"]
tests = ["tests", "*/micoo/tests"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.hatch.build]
hooks.vcs.version-file = "src/micoo/_version.py"

[tool.mypy]
files = ["src"]
pretty = true
python_version = "3.14"
show_error_codes = true
strict = true

[tool.pyrefly]
python-version = "3.14"
project-includes = ["src"]

[tool.pyright]
include = ["src/micoo"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.ruff]
fix = true
preview = true
show-fixes = true
src = ["src", "tests"]
target-version = "py314"
unsafe-fixes = true

[tool.ruff.analyze]
detect-string-imports = true
preview = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true

[tool.ruff.lint]
ignore = ["COM812", "CPY", "D203", "D213", "FIX", "TD"]
fixable = ["ALL"]
logger-objects = ["logging_setup.logger"]
preview = true
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.flake8-copyright]
author = "Hasan Sezer Taşan <hasansezertasan@gmail.com>"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.ruff]
parenthesize-tuple-in-subscript = true

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.slotscheck]
strict-imports = false

[tool.tox]
env_list = ["style", "run", "3.14", "cov"]
requires = ["tox>=4"]

[tool.tox.env_run_base]
commands = [
  [
    "coverage",
    "run",
    "-m",
    "pytest",
    "-v",
    "--tb=short",
    "--basetemp={env_tmp_dir}",
    { replace = "posargs", default = [
    ], extend = true },
  ],
]
constrain_package_deps = true
dependency_groups = ["test"]
description = "Run the tests under {base_python}"
env_tmp_dir = "{toxworkdir}/tmp/{envname}"
package = "wheel"
runner = "uv-venv-runner"
use_frozen_constraints = true
wheel_build_env = ".pkg"

[tool.tox.env.style]
base_python = ["3.14"]
commands = [
  [
    "ruff",
    "check",
  ],
  [
    "ruff",
    "format",
  ],
  [
    "mypy",
  ],
  [
    "pyright",
  ],
  [
    "ty",
    "check",
  ],
  [
    "pyrefly",
    "check",
  ],
  [
    "vulture",
  ],
  [
    "slotscheck",
    "-m",
    "micoo",
  ],
  [
    "taplo",
    "lint",
  ],
  [
    "taplo",
    "format",
  ],
  [
    "validate-pyproject",
    "pyproject.toml",
  ],
  [
    "typos",
    "--diff",
  ],
  [
    "actionlint",
  ],
  [
    "yamlfmt",
    "-gitignore_excludes",
    "-lint",
    ".",
  ],
]
runner = "uv-venv-runner"
dependency_groups = ["lint"]
description = "Run Linters and Formatters"


[tool.tox.env.run]
commands = [["micoo", "version", { replace = "posargs", extend = true }]]
description = "Run the application"

[tool.tox.env.cov]
base_python = ["3.14"]
commands = [
  [
    "coverage",
    "combine",
  ],
  [
    "coverage",
    "xml",
  ],
  [
    "coverage",
    "report",
  ],
]
dependency_groups = ["test"]
depends = ["3.14"]
description = "Combine coverage data and emit XML/report"
runner = "uv-venv-runner"
skip_install = true

[tool.ty.src]
include = ["src"]
respect-ignore-files = false

[tool.ty.environment]
python-version = "3.14"

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]
trusted-publishing = "always"

[tool.vulture]
ignore_decorators = ["@app.command", "@pytest.fixture"]
min_confidence = 60
paths = ["src", "tests"]
